[tool.poetry]
name = "expense-bot"
package-mode = false
version = "0.1.0"
description = "Telegram bot for managing expenses, developed with Aiogram. Allows users to add, view, edit, and delete expenses through an interactive interface."
authors = ["Moses-93 <moieseenko2001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
aiogram = "3.19.0"
httpx = "0.28.1"
black = "25.1.0"
python-dotenv = "^1.1.0"
punq = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
